--- a/Calculus_HW_8.ipynb
+++ b/Calculus_HW_8.ipynb
@@ -64,7 +64,72 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcccb31b",
+   "id": "ed0776ab",
+   "metadata": {},
+   "source": [
+    "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0 \\\\L'_{y}=6+2\\lambda y=0 \\\\L'_{\\lambda}=x^2+y^2-36=0\n",
+    "\\end{cases}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a00c7306",
+   "metadata": {},
+   "source": [
+    "$$\\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68370666",
+   "metadata": {},
+   "source": [
+    "$$\\Rightarrow \\left[ \\begin{gathered} \\left\\{\\begin{gathered}x=\\frac{24}{5} \\\\ y=\\frac{18}{5} \\\\ y=\\frac{5}{6}\\end{gathered}\\right. \\\\ \\left\\{\\begin{gathered}x=-\\frac{24}{5} \\\\ y=-\\frac{18}{5} \\\\ y=-\\frac{5}{6} \\end{gathered}\\right.\\end{gathered} \\right.$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7acd21cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd28b7a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa8f2e15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00831c8b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c139d9d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0094b24c",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0 \\\\L'_{y}=6+2\\lambda y=0 \\\\L'_{\\lambda}=x^2+y^2-36=0\n",
@@ -128,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bd9f581",
+   "id": "dbede33b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -136,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cff1f6e9",
+   "id": "2fb751d1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -144,14 +209,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8d0fb2b",
+   "id": "867fe8de",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "f6785116",
+   "id": "d97d70a2",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0, \\\\L'_{y}=6+2\\lambda y=0, \\\\L'_{\\lambda}=x^2+y^2-36=0 \\end{cases}\\Rightarrow\\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}\\Rightarrow \n",
@@ -178,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b787256",
+   "id": "57880f66",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "818756f2",
+   "id": "b74a42a9",
    "metadata": {},
    "outputs": [],
    "source": []
