--- a/Calculus_HW_8.ipynb
+++ b/Calculus_HW_8.ipynb
@@ -64,33 +64,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed0776ab",
+   "id": "e3b4196c",
    "metadata": {},
    "source": [
-    "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0 \\\\L'_{y}=6+2\\lambda y=0 \\\\L'_{\\lambda}=x^2+y^2-36=0\n",
-    "\\end{cases}$$"
+    "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0 \\\\L'_{y}=6+2\\lambda y=0 \\\\L'_{\\lambda}=x^2+y^2-36=0\\end{cases}$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a00c7306",
+   "id": "6289219b",
    "metadata": {},
    "source": [
-    "$$\\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}$$"
+    "### $$\\Rightarrow \\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "68370666",
+   "id": "49ed62c8",
    "metadata": {},
    "source": [
-    "$$\\Rightarrow \\left[ \\begin{gathered} \\left\\{\\begin{gathered}x=\\frac{24}{5} \\\\ y=\\frac{18}{5} \\\\ y=\\frac{5}{6}\\end{gathered}\\right. \\\\ \\left\\{\\begin{gathered}x=-\\frac{24}{5} \\\\ y=-\\frac{18}{5} \\\\ y=-\\frac{5}{6} \\end{gathered}\\right.\\end{gathered} \\right.$$"
+    "### $$\\Rightarrow \\left[ \\begin{gathered} \\left\\{\\begin{gathered}x=\\frac{24}{5} \\\\ y=\\frac{18}{5} \\\\ y=\\frac{5}{6}\\end{gathered}\\right. \\\\ \\left\\{\\begin{gathered}x=-\\frac{24}{5} \\\\ y=-\\frac{18}{5} \\\\ y=-\\frac{5}{6} \\end{gathered}\\right.\\end{gathered} \\right.$$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7acd21cb",
+   "id": "4ce84cd9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -98,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd28b7a3",
+   "id": "19787442",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -106,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa8f2e15",
+   "id": "6d175bb7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -114,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00831c8b",
+   "id": "645d31db",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -122,14 +121,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c139d9d",
+   "id": "7e9dcb45",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0094b24c",
+   "id": "9f22998c",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0 \\\\L'_{y}=6+2\\lambda y=0 \\\\L'_{\\lambda}=x^2+y^2-36=0\n",
@@ -193,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbede33b",
+   "id": "6700c95a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -201,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fb751d1",
+   "id": "d5d5f1cd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -209,14 +208,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "867fe8de",
+   "id": "d7d6eafc",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d97d70a2",
+   "id": "1a1f2363",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0, \\\\L'_{y}=6+2\\lambda y=0, \\\\L'_{\\lambda}=x^2+y^2-36=0 \\end{cases}\\Rightarrow\\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}\\Rightarrow \n",
@@ -243,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57880f66",
+   "id": "b249d288",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -251,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b74a42a9",
+   "id": "b790c53a",
    "metadata": {},
    "outputs": [],
    "source": []
