--- a/Calculus_HW_8.ipynb
+++ b/Calculus_HW_8.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3b4196c",
+   "id": "6767cc8b",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0 \\\\L'_{y}=6+2\\lambda y=0 \\\\L'_{\\lambda}=x^2+y^2-36=0\\end{cases}$$"
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6289219b",
+   "id": "322a1565",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow \\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}$$"
@@ -80,59 +80,56 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49ed62c8",
+   "id": "6d44d31b",
    "metadata": {},
    "source": [
-    "### $$\\Rightarrow \\left[ \\begin{gathered} \\left\\{\\begin{gathered}x=\\frac{24}{5} \\\\ y=\\frac{18}{5} \\\\ y=\\frac{5}{6}\\end{gathered}\\right. \\\\ \\left\\{\\begin{gathered}x=-\\frac{24}{5} \\\\ y=-\\frac{18}{5} \\\\ y=-\\frac{5}{6} \\end{gathered}\\right.\\end{gathered} \\right.$$"
+    "#### $$\\Rightarrow \\left[ \\begin{gathered} \\left\\{\\begin{gathered}x=\\frac{24}{5} \\\\ y=\\frac{18}{5} \\\\ y=\\frac{5}{6}\\end{gathered}\\right. \\\\ \\left\\{\\begin{gathered}x=-\\frac{24}{5} \\\\ y=-\\frac{18}{5} \\\\ y=-\\frac{5}{6} \\end{gathered}\\right.\\end{gathered} \\right.$$"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ce84cd9",
+   "cell_type": "markdown",
+   "id": "eef79ef5",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19787442",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d175bb7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "645d31db",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e9dcb45",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "получаем две точки $(\\frac{24}{5},\\frac{18}{5},\\frac{5}{6})$ и $(-\\frac{24}{5},-\\frac{18}{5},-\\frac{5}{6})$"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "9f22998c",
+   "id": "9752ca58",
    "metadata": {},
    "source": [
-    "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0 \\\\L'_{y}=6+2\\lambda y=0 \\\\L'_{\\lambda}=x^2+y^2-36=0\n",
-    "\\end{cases} \\Rightarrow \\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases} \\Rightarrow \\left[ \\begin{gathered} \\left\\{\\begin{gathered}x=\\frac{24}{5} \\\\ y=\\frac{18}{5} \\\\ y=\\frac{5}{6}\\end{gathered}\\right. \\\\ \\left\\{\\begin{gathered}x=-\\frac{24}{5} \\\\ y=-\\frac{18}{5} \\\\ y=-\\frac{5}{6} \\end{gathered}\\right.\\end{gathered} \\right.$$"
+    "найдём вторые производные"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3252cca9",
+   "metadata": {},
+   "source": [
+    "### $$L''_{xx}=2\\lambda \\\\ \n",
+    "L''_{xy}=0 \\\\ \n",
+    "L''_{x\\lambda}=2x$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bbd33d6",
+   "metadata": {},
+   "source": [
+    "### $$L''_{yx}=0 \\\\ \n",
+    "L''_{yy}=2\\lambda \\\\ \n",
+    "L''_{y\\lambda}=2y$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b436072",
+   "metadata": {},
+   "source": [
+    "### $$L''_{\\lambda x}=2x \\\\ \n",
+    "L''_{\\lambda y}=2y \\\\ \n",
+    "L''_{\\lambda\\lambda}=0$$"
    ]
   },
   {
@@ -144,12 +141,33 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9d59c96",
+   "cell_type": "markdown",
+   "id": "f74071ce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### $$\\Delta=\\begin{vmatrix}\n",
+    "2\\lambda & 0 & 2x\\\\ \n",
+    "0 & 2\\lambda & 2y\\\\\n",
+    "2x & 2y & 0\\\\\n",
+    "\\end{vmatrix}=\n",
+    "\\begin{vmatrix}\n",
+    "+ & - & +\\\\ \n",
+    "- & + & -\\\\\n",
+    "+ & - & +\\\\\n",
+    "\\end{vmatrix}=0\\cdot\n",
+    "\\begin{vmatrix}\n",
+    "2\\lambda & 0\\\\\n",
+    "0 & 2\\lambda\\\\\n",
+    "\\end{vmatrix}-2x\\cdot\n",
+    "\\begin{vmatrix}\n",
+    "2x & 0\\\\\n",
+    "2y & 2\\lambda\\\\\n",
+    "\\end{vmatrix}+2y\\cdot\n",
+    "\\begin{vmatrix}\n",
+    "2x & 2\\lambda\\\\\n",
+    "2y & 0\\\\\n",
+    "\\end{vmatrix}=(-2x)\\cdot 4x\\lambda+2y \\cdot(-4y\\lambda)=-8\\lambda(x^2+y^2)$$"
+   ]
   },
   {
    "cell_type": "code",
@@ -192,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6700c95a",
+   "id": "0c7a7de1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -200,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5d5f1cd",
+   "id": "347e4daa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -208,14 +226,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7d6eafc",
+   "id": "6531a53e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1a1f2363",
+   "id": "2e8ab925",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0, \\\\L'_{y}=6+2\\lambda y=0, \\\\L'_{\\lambda}=x^2+y^2-36=0 \\end{cases}\\Rightarrow\\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}\\Rightarrow \n",
@@ -242,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b249d288",
+   "id": "4a1fcb3c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -250,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b790c53a",
+   "id": "283fe95d",
    "metadata": {},
    "outputs": [],
    "source": []
