--- a/Calculus_HW_8.ipynb
+++ b/Calculus_HW_8.ipynb
@@ -48,6 +48,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e6ff3663",
+   "metadata": {},
+   "source": [
+    "составим функцию Лагранжа:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0f658935",
    "metadata": {},
    "source": [
@@ -55,16 +63,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16c106d0",
+   "cell_type": "markdown",
+   "id": "0a2a52fc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "найдем частные производные, приравняем их к нулю и решим систему уравнений:"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "6767cc8b",
+   "id": "181b14dd",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0 \\\\L'_{y}=6+2\\lambda y=0 \\\\L'_{\\lambda}=x^2+y^2-36=0\\end{cases}$$"
@@ -72,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "322a1565",
+   "id": "e5e082ca",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow \\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}$$"
@@ -80,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d44d31b",
+   "id": "75e6db65",
    "metadata": {},
    "source": [
     "#### $$\\Rightarrow \\left[ \\begin{gathered} \\left\\{\\begin{gathered}x=\\frac{24}{5} \\\\ y=\\frac{18}{5} \\\\ y=\\frac{5}{6}\\end{gathered}\\right. \\\\ \\left\\{\\begin{gathered}x=-\\frac{24}{5} \\\\ y=-\\frac{18}{5} \\\\ y=-\\frac{5}{6} \\end{gathered}\\right.\\end{gathered} \\right.$$"
@@ -88,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eef79ef5",
+   "id": "0c6f1cca",
    "metadata": {},
    "source": [
     "получаем две точки $(\\frac{24}{5},\\frac{18}{5},\\frac{5}{6})$ и $(-\\frac{24}{5},-\\frac{18}{5},-\\frac{5}{6})$"
@@ -96,15 +104,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9752ca58",
+   "id": "d264e2cc",
    "metadata": {},
    "source": [
-    "найдём вторые производные"
+    "найдём вторые производные:"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3252cca9",
+   "id": "68346085",
    "metadata": {},
    "source": [
     "### $$L''_{xx}=2\\lambda \\\\ \n",
@@ -114,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bbd33d6",
+   "id": "de903f34",
    "metadata": {},
    "source": [
     "### $$L''_{yx}=0 \\\\ \n",
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b436072",
+   "id": "06fc37da",
    "metadata": {},
    "source": [
     "### $$L''_{\\lambda x}=2x \\\\ \n",
@@ -133,16 +141,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79ef462c",
+   "cell_type": "markdown",
+   "id": "e06b3fa7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "далее найдем определитель в общем виде, а затем уже разберемся с каждой точкой:"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "f74071ce",
+   "id": "82026afa",
    "metadata": {},
    "source": [
     "### $$\\Delta=\\begin{vmatrix}\n",
@@ -154,36 +162,60 @@
     "+ & - & +\\\\ \n",
     "- & + & -\\\\\n",
     "+ & - & +\\\\\n",
-    "\\end{vmatrix}=0\\cdot\n",
+    "\\end{vmatrix}=2\\lambda \\cdot\n",
     "\\begin{vmatrix}\n",
-    "2\\lambda & 0\\\\\n",
-    "0 & 2\\lambda\\\\\n",
-    "\\end{vmatrix}-2x\\cdot\n",
-    "\\begin{vmatrix}\n",
-    "2x & 0\\\\\n",
-    "2y & 2\\lambda\\\\\n",
-    "\\end{vmatrix}+2y\\cdot\n",
-    "\\begin{vmatrix}\n",
-    "2x & 2\\lambda\\\\\n",
+    "2\\lambda & 2y\\\\\n",
     "2y & 0\\\\\n",
-    "\\end{vmatrix}=(-2x)\\cdot 4x\\lambda+2y \\cdot(-4y\\lambda)=-8\\lambda(x^2+y^2)$$"
+    "\\end{vmatrix}-0\\cdot\n",
+    "\\begin{vmatrix}\n",
+    "0 & 2y\\\\\n",
+    "2x & 0\\\\\n",
+    "\\end{vmatrix}+2x\\cdot\n",
+    "\\begin{vmatrix}\n",
+    "0 & 2\\lambda\\\\\n",
+    "2x & 2y\\\\\n",
+    "\\end{vmatrix}\\\\=2\\lambda \\cdot (2\\lambda \\cdot0-2y\\cdot2y)-0+2x\\cdot(0\\cdot2y - 2\\lambda\\cdot2x) = -8\\lambda(x^2+y^2)$$"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "291ef6db",
+   "cell_type": "markdown",
+   "id": "46d8f351",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "по условию $x^2+y^2=36$, тогда"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc27654b",
+   "cell_type": "markdown",
+   "id": "a219c9b7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### $$\\Delta=-8\\lambda \\cdot 36=-288\\lambda$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f31e7985",
+   "metadata": {},
+   "source": [
+    "т.е. знак определителя засисит только от знака $\\lambda$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e4c2e81",
+   "metadata": {},
+   "source": [
+    "#### если $\\lambda=\\frac{5}{6}$, то $\\Delta<0$, следовательно $(\\frac{24}{5},\\frac{18}{5},\\frac{5}{6})$ - точка минимума"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3102dc4",
+   "metadata": {},
+   "source": [
+    "#### если $\\lambda=-\\frac{5}{6}$, то $\\Delta>0$, следовательно $(-\\frac{24}{5},-\\frac{18}{5},-\\frac{5}{6})$ - точка максимума"
+   ]
   },
   {
    "cell_type": "code",
@@ -208,49 +240,90 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c7a7de1",
+   "cell_type": "markdown",
+   "id": "fde60b53",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "347e4daa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6531a53e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "составим функцию Лагранжа:"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "2e8ab925",
+   "id": "4382ef71",
    "metadata": {},
    "source": [
-    "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0, \\\\L'_{y}=6+2\\lambda y=0, \\\\L'_{\\lambda}=x^2+y^2-36=0 \\end{cases}\\Rightarrow\\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}\\Rightarrow \n",
+    "### $$L(x,y,\\lambda)=2x^2+12xy+32y^2+15+\\lambda \\cdot (x^2+16y^2-64)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bf4e866",
+   "metadata": {},
+   "source": [
+    "найдем частные производные, приравняем их к нулю и решим систему уравнений:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82d633d9",
+   "metadata": {},
+   "source": [
+    "### $$\\begin{cases}L'_{x}=4x+12y+2\\lambda x=0, \\\\L'_{y}=12x+64y+32\\lambda y=0, \\\\L'_{\\lambda}=x^2+16y^2-64=0 \\end{cases}$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca4c63fb",
+   "metadata": {},
+   "source": [
+    "### $$\\Rightarrow\\begin{cases} x=-\\frac{12y}{4+2\\lambda} \\\\ 12(-\\frac{12y}{4+2\\lambda})+64y+32\\lambda y=0 \\\\ x^2+16y^2-64=0\\end{cases}$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84262d81",
+   "metadata": {},
+   "source": [
+    "### $$\\Rightarrow\\begin{cases} x=-\\frac{12y}{4+2\\lambda} \\\\ \n",
+    "\\left[\n",
+    "\\begin{gathered}\n",
+    "\\lambda = -\\frac{7}{2} \\\\ \n",
+    "\\lambda = -\\frac{1}{2}\n",
+    "\\end{gathered}\n",
+    "\\right.\\\\\n",
+    "x^2+16y^2-64=0\\end{cases}$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06afab05",
+   "metadata": {},
+   "source": [
+    "### $$\\Rightarrow \n",
     "\\left[ \n",
     "    \\begin{gathered} \n",
     "        \\left\\{\n",
     "        \\begin{gathered}\n",
-    "            x=\\frac{24}{5} \\\\ \n",
-    "            y=\\frac{18}{5} \\\\ \n",
-    "            y=\\frac{5}{6}\n",
+    "            \\lambda =-\\frac{7}{2} \\\\ \n",
+    "            x=4y \\\\ \n",
+    "            \\left[\n",
+    "            \\begin{gathered} \n",
+    "                y=\\sqrt{2} \\\\\n",
+    "                y=-\\sqrt{2}\n",
+    "            \\end{gathered}\n",
+    "            \\right.\n",
     "        \\end{gathered}\n",
     "        \\right. \\\\\n",
     "        \\left\\{\n",
     "        \\begin{gathered}\n",
-    "            x=-\\frac{24}{5} \\\\ \n",
-    "            y=-\\frac{18}{5} \\\\ \n",
-    "            y=-\\frac{5}{6} \n",
+    "            \\lambda =-\\frac{1}{2} \\\\ \n",
+    "            x=-4y \\\\ \n",
+    "            \\left[\n",
+    "            \\begin{gathered} \n",
+    "                y=\\sqrt{2} \\\\\n",
+    "                y=-\\sqrt{2}\n",
+    "            \\end{gathered}\n",
+    "            \\right.\n",
     "        \\end{gathered}\n",
     "        \\right. \n",
     "    \\end{gathered} \n",
@@ -258,25 +331,191 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a1fcb3c",
+   "cell_type": "markdown",
+   "id": "4e8ae0bf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "получаем четыре точки \n",
+    "$(4\\sqrt{2},\\sqrt{2},-\\frac{7}{2})$, \n",
+    "$(-4\\sqrt{2},-\\sqrt{2},-\\frac{7}{2})$,\n",
+    "$(-4\\sqrt{2},\\sqrt{2},-\\frac{1}{2})$,\n",
+    "$(4\\sqrt{2},-\\sqrt{2},-\\frac{1}{2})$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9908bd54",
+   "metadata": {},
+   "source": [
+    "найдём вторые производные:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "738b3358",
+   "metadata": {},
+   "source": [
+    "### $$L''_{xx}=4+2\\lambda \\\\ \n",
+    "L''_{xy}=12 \\\\ \n",
+    "L''_{x\\lambda}=2x$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11ffed44",
+   "metadata": {},
+   "source": [
+    "### $$L''_{yx}=12 \\\\ \n",
+    "L''_{yy}=64+32\\lambda \\\\ \n",
+    "L''_{y\\lambda}=32y$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a66a1755",
+   "metadata": {},
+   "source": [
+    "### $$L''_{\\lambda x}=2x \\\\ \n",
+    "L''_{\\lambda y}=32y \\\\ \n",
+    "L''_{\\lambda\\lambda}=0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4b5deb5",
+   "metadata": {},
+   "source": [
+    "далее найдем определитель в общем виде, а затем уже разберемся с каждой точкой:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7a82ba5",
+   "metadata": {},
+   "source": [
+    "### $$\\Delta=\\begin{vmatrix}\n",
+    "4+2\\lambda & 12 & 2x\\\\ \n",
+    "12 & 64+32\\lambda & 32y\\\\\n",
+    "2x & 32y & 0\\\\\n",
+    "\\end{vmatrix}=-256(x^2+16y^2)-126\\lambda(x^2+16y^2)+1536xy$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ee37010",
+   "metadata": {},
+   "source": [
+    "по условию $x^2+16y^2=64$, тогда"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c03772b",
+   "metadata": {},
+   "source": [
+    "### $$\\Delta=-256\\cdot64-126\\lambda\\cdot64+1536xy=-16384-8192\\lambda+1536xy$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a955e27",
+   "metadata": {},
+   "source": [
+    "точкa $(4\\sqrt{2},\\sqrt{2},-\\frac{7}{2})$:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ffde6f4",
+   "metadata": {},
+   "source": [
+    "### $$\\Delta=-16384-8192\\cdot(-\\frac{7}{2})+1536\\cdot4\\sqrt{2}\\cdot \\sqrt{2}>0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66d34f5c",
+   "metadata": {},
+   "source": [
+    "#### следовательно, точкa $(4\\sqrt{2},\\sqrt{2},-\\frac{7}{2})$ - точка максимума"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcf853cf",
+   "metadata": {},
+   "source": [
+    "точкa $(-4\\sqrt{2},-\\sqrt{2},-\\frac{7}{2})$:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce3b449e",
+   "metadata": {},
+   "source": [
+    "### $$\\Delta=-16384-8192\\cdot(-\\frac{7}{2})+1536\\cdot(-4\\sqrt{2})\\cdot (-\\sqrt{2})>0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f80be8b",
+   "metadata": {},
+   "source": [
+    "#### следовательно, точкa $(-4\\sqrt{2},-\\sqrt{2},-\\frac{7}{2})$ - точка максимума"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d96c344",
+   "metadata": {},
+   "source": [
+    "точкa $(-4\\sqrt{2},\\sqrt{2},-\\frac{1}{2})$:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf3caf27",
+   "metadata": {},
+   "source": [
+    "### $$\\Delta=-16384-8192\\cdot(-\\frac{1}{2})+1536\\cdot(-4\\sqrt{2})\\cdot \\sqrt{2}<0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c79c01d3",
+   "metadata": {},
+   "source": [
+    "#### следовательно, точкa $(-4\\sqrt{2},\\sqrt{2},-\\frac{1}{2})$ - точка минимума"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "818a69b6",
+   "metadata": {},
+   "source": [
+    "точкa $(4\\sqrt{2},-\\sqrt{2},-\\frac{1}{2})$:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0bb2873",
+   "metadata": {},
+   "source": [
+    "### $$\\Delta=-16384-8192\\cdot(-\\frac{1}{2})+1536\\cdot4\\sqrt{2}\\cdot(-\\sqrt{2})<0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "771fbcf2",
+   "metadata": {},
+   "source": [
+    "#### следовательно, точкa $(4\\sqrt{2},-\\sqrt{2},-\\frac{1}{2})$ - точка минимума"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "283fe95d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b33ddeca",
+   "id": "65b0d95b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -295,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "431a92b5",
    "metadata": {},
    "outputs": [
@@ -339,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "2260ed7a",
    "metadata": {},
    "outputs": [
