--- a/Calculus_HW_8.ipynb
+++ b/Calculus_HW_8.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6ff3663",
+   "id": "2f729f46",
    "metadata": {},
    "source": [
     "составим функцию Лагранжа:"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a2a52fc",
+   "id": "7800eef1",
    "metadata": {},
    "source": [
     "найдем частные производные, приравняем их к нулю и решим систему уравнений:"
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "181b14dd",
+   "id": "aa37e184",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0 \\\\L'_{y}=6+2\\lambda y=0 \\\\L'_{\\lambda}=x^2+y^2-36=0\\end{cases}$$"
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5e082ca",
+   "id": "2a0c3281",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow \\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}$$"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75e6db65",
+   "id": "38ad2204",
    "metadata": {},
    "source": [
     "#### $$\\Rightarrow \\left[ \\begin{gathered} \\left\\{\\begin{gathered}x=\\frac{24}{5} \\\\ y=\\frac{18}{5} \\\\ y=\\frac{5}{6}\\end{gathered}\\right. \\\\ \\left\\{\\begin{gathered}x=-\\frac{24}{5} \\\\ y=-\\frac{18}{5} \\\\ y=-\\frac{5}{6} \\end{gathered}\\right.\\end{gathered} \\right.$$"
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c6f1cca",
+   "id": "da77c0e6",
    "metadata": {},
    "source": [
     "получаем две точки $(\\frac{24}{5},\\frac{18}{5},\\frac{5}{6})$ и $(-\\frac{24}{5},-\\frac{18}{5},-\\frac{5}{6})$"
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d264e2cc",
+   "id": "eda5255d",
    "metadata": {},
    "source": [
     "найдём вторые производные:"
@@ -112,37 +112,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68346085",
+   "id": "38739d28",
    "metadata": {},
    "source": [
-    "### $$L''_{xx}=2\\lambda \\\\ \n",
-    "L''_{xy}=0 \\\\ \n",
-    "L''_{x\\lambda}=2x$$"
+    "### $$L''_{xx}=2\\lambda \\\\ L''_{xy}=0 \\\\ L''_{x\\lambda}=2x$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "de903f34",
+   "id": "72471c17",
    "metadata": {},
    "source": [
-    "### $$L''_{yx}=0 \\\\ \n",
-    "L''_{yy}=2\\lambda \\\\ \n",
-    "L''_{y\\lambda}=2y$$"
+    "### $$L''_{yx}=0 \\\\ L''_{yy}=2\\lambda \\\\ L''_{y\\lambda}=2y$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "06fc37da",
+   "id": "4582292d",
    "metadata": {},
    "source": [
-    "### $$L''_{\\lambda x}=2x \\\\ \n",
-    "L''_{\\lambda y}=2y \\\\ \n",
-    "L''_{\\lambda\\lambda}=0$$"
+    "### $$L''_{\\lambda x}=2x \\\\ L''_{\\lambda y}=2y \\\\ L''_{\\lambda\\lambda}=0$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e06b3fa7",
+   "id": "e27b1888",
    "metadata": {},
    "source": [
     "далее найдем определитель в общем виде, а затем уже разберемся с каждой точкой:"
@@ -150,36 +144,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82026afa",
+   "id": "eed269d0",
    "metadata": {},
    "source": [
-    "### $$\\Delta=\\begin{vmatrix}\n",
-    "2\\lambda & 0 & 2x\\\\ \n",
-    "0 & 2\\lambda & 2y\\\\\n",
-    "2x & 2y & 0\\\\\n",
-    "\\end{vmatrix}=\n",
-    "\\begin{vmatrix}\n",
-    "+ & - & +\\\\ \n",
-    "- & + & -\\\\\n",
-    "+ & - & +\\\\\n",
-    "\\end{vmatrix}=2\\lambda \\cdot\n",
-    "\\begin{vmatrix}\n",
-    "2\\lambda & 2y\\\\\n",
-    "2y & 0\\\\\n",
-    "\\end{vmatrix}-0\\cdot\n",
-    "\\begin{vmatrix}\n",
-    "0 & 2y\\\\\n",
-    "2x & 0\\\\\n",
-    "\\end{vmatrix}+2x\\cdot\n",
-    "\\begin{vmatrix}\n",
-    "0 & 2\\lambda\\\\\n",
-    "2x & 2y\\\\\n",
-    "\\end{vmatrix}\\\\=2\\lambda \\cdot (2\\lambda \\cdot0-2y\\cdot2y)-0+2x\\cdot(0\\cdot2y - 2\\lambda\\cdot2x) = -8\\lambda(x^2+y^2)$$"
+    "### $$\\Delta=\\begin{vmatrix}2\\lambda & 0 & 2x\\\\ 0 & 2\\lambda & 2y\\\\2x & 2y & 0\\\\\\end{vmatrix}=\\begin{vmatrix}+ & - & +\\\\ - & + & -\\\\+ & - & +\\\\\\end{vmatrix}=2\\lambda \\cdot\\begin{vmatrix}2\\lambda & 2y\\\\2y & 0\\\\\\end{vmatrix}-0\\cdot\\begin{vmatrix}0 & 2y\\\\2x & 0\\\\\\end{vmatrix}+2x\\cdot\\begin{vmatrix}0 & 2\\lambda\\\\2x & 2y\\\\\\end{vmatrix}\\\\=2\\lambda \\cdot (2\\lambda \\cdot0-2y\\cdot2y)-0+2x\\cdot(0\\cdot2y - 2\\lambda\\cdot2x) = -8\\lambda(x^2+y^2)$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "46d8f351",
+   "id": "60f17722",
    "metadata": {},
    "source": [
     "по условию $x^2+y^2=36$, тогда"
@@ -187,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a219c9b7",
+   "id": "cc240731",
    "metadata": {},
    "source": [
     "### $$\\Delta=-8\\lambda \\cdot 36=-288\\lambda$$"
@@ -195,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f31e7985",
+   "id": "56c5930c",
    "metadata": {},
    "source": [
     "т.е. знак определителя засисит только от знака $\\lambda$"
@@ -203,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e4c2e81",
+   "id": "821079b3",
    "metadata": {},
    "source": [
     "#### если $\\lambda=\\frac{5}{6}$, то $\\Delta<0$, следовательно $(\\frac{24}{5},\\frac{18}{5},\\frac{5}{6})$ - точка минимума"
@@ -211,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3102dc4",
+   "id": "0b48c1e4",
    "metadata": {},
    "source": [
     "#### если $\\lambda=-\\frac{5}{6}$, то $\\Delta>0$, следовательно $(-\\frac{24}{5},-\\frac{18}{5},-\\frac{5}{6})$ - точка максимума"
@@ -241,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fde60b53",
+   "id": "bde53133",
    "metadata": {},
    "source": [
     "составим функцию Лагранжа:"
@@ -249,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4382ef71",
+   "id": "336fd3e8",
    "metadata": {},
    "source": [
     "### $$L(x,y,\\lambda)=2x^2+12xy+32y^2+15+\\lambda \\cdot (x^2+16y^2-64)$$"
@@ -257,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bf4e866",
+   "id": "063c8ca2",
    "metadata": {},
    "source": [
     "найдем частные производные, приравняем их к нулю и решим систему уравнений:"
@@ -265,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82d633d9",
+   "id": "30e6200d",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}L'_{x}=4x+12y+2\\lambda x=0, \\\\L'_{y}=12x+64y+32\\lambda y=0, \\\\L'_{\\lambda}=x^2+16y^2-64=0 \\end{cases}$$ "
@@ -273,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca4c63fb",
+   "id": "cb79c661",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow\\begin{cases} x=-\\frac{12y}{4+2\\lambda} \\\\ 12(-\\frac{12y}{4+2\\lambda})+64y+32\\lambda y=0 \\\\ x^2+16y^2-64=0\\end{cases}$$ "
@@ -281,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84262d81",
+   "id": "5ba6e0e9",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow\\begin{cases} x=-\\frac{12y}{4+2\\lambda} \\\\ \n",
@@ -296,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06afab05",
+   "id": "0b48b2f3",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow \n",
@@ -332,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e8ae0bf",
+   "id": "01fad0f2",
    "metadata": {},
    "source": [
     "получаем четыре точки \n",
@@ -344,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9908bd54",
+   "id": "df999207",
    "metadata": {},
    "source": [
     "найдём вторые производные:"
@@ -352,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "738b3358",
+   "id": "6bbe0ed9",
    "metadata": {},
    "source": [
     "### $$L''_{xx}=4+2\\lambda \\\\ \n",
@@ -362,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11ffed44",
+   "id": "f83f3743",
    "metadata": {},
    "source": [
     "### $$L''_{yx}=12 \\\\ \n",
@@ -372,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a66a1755",
+   "id": "3a8508dd",
    "metadata": {},
    "source": [
     "### $$L''_{\\lambda x}=2x \\\\ \n",
@@ -382,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4b5deb5",
+   "id": "bb212f60",
    "metadata": {},
    "source": [
     "далее найдем определитель в общем виде, а затем уже разберемся с каждой точкой:"
@@ -390,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7a82ba5",
+   "id": "749999cc",
    "metadata": {},
    "source": [
     "### $$\\Delta=\\begin{vmatrix}\n",
@@ -402,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ee37010",
+   "id": "5532480d",
    "metadata": {},
    "source": [
     "по условию $x^2+16y^2=64$, тогда"
@@ -410,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c03772b",
+   "id": "d62f6080",
    "metadata": {},
    "source": [
     "### $$\\Delta=-256\\cdot64-126\\lambda\\cdot64+1536xy=-16384-8192\\lambda+1536xy$$"
@@ -418,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a955e27",
+   "id": "2c09b2fe",
    "metadata": {},
    "source": [
     "точкa $(4\\sqrt{2},\\sqrt{2},-\\frac{7}{2})$:"
@@ -426,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ffde6f4",
+   "id": "b2b88495",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{7}{2})+1536\\cdot4\\sqrt{2}\\cdot \\sqrt{2}>0$$"
@@ -434,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66d34f5c",
+   "id": "f42c4e63",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(4\\sqrt{2},\\sqrt{2},-\\frac{7}{2})$ - точка максимума"
@@ -442,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcf853cf",
+   "id": "74670348",
    "metadata": {},
    "source": [
     "точкa $(-4\\sqrt{2},-\\sqrt{2},-\\frac{7}{2})$:"
@@ -450,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce3b449e",
+   "id": "34d189d7",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{7}{2})+1536\\cdot(-4\\sqrt{2})\\cdot (-\\sqrt{2})>0$$"
@@ -458,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f80be8b",
+   "id": "7465ceec",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(-4\\sqrt{2},-\\sqrt{2},-\\frac{7}{2})$ - точка максимума"
@@ -466,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d96c344",
+   "id": "17872195",
    "metadata": {},
    "source": [
     "точкa $(-4\\sqrt{2},\\sqrt{2},-\\frac{1}{2})$:"
@@ -474,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf3caf27",
+   "id": "fce3c8a4",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{1}{2})+1536\\cdot(-4\\sqrt{2})\\cdot \\sqrt{2}<0$$"
@@ -482,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c79c01d3",
+   "id": "e713b68c",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(-4\\sqrt{2},\\sqrt{2},-\\frac{1}{2})$ - точка минимума"
@@ -490,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "818a69b6",
+   "id": "372ddc31",
    "metadata": {},
    "source": [
     "точкa $(4\\sqrt{2},-\\sqrt{2},-\\frac{1}{2})$:"
@@ -498,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0bb2873",
+   "id": "f4b8b3bf",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{1}{2})+1536\\cdot4\\sqrt{2}\\cdot(-\\sqrt{2})<0$$"
@@ -506,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "771fbcf2",
+   "id": "dcfc4cbe",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(4\\sqrt{2},-\\sqrt{2},-\\frac{1}{2})$ - точка минимума"
@@ -515,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65b0d95b",
+   "id": "79222b31",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -526,10 +499,7 @@
    "metadata": {},
    "source": [
     "__3.__ Численно найти хотя бы один действительный корень системы нелинейных уравнений:\n",
-    "### $$\\begin{cases}\n",
-    "   x^2-y^2+3xy^3-2x^2y^2+2x-3y-5=0 \\\\\n",
-    "   3y^3-2x^2+2x^3y-5x^2y^2+5=0\n",
-    " \\end{cases}$$"
+    "### $$\\begin{cases}x^2-y^2+3xy^3-2x^2y^2+2x-3y-5=0 \\\\3y^3-2x^2+2x^3y-5x^2y^2+5=0\\end{cases}$$"
    ]
   },
   {
