--- a/Calculus_HW_8.ipynb
+++ b/Calculus_HW_8.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f729f46",
+   "id": "0f5fd92f",
    "metadata": {},
    "source": [
     "составим функцию Лагранжа:"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7800eef1",
+   "id": "28f71e49",
    "metadata": {},
    "source": [
     "найдем частные производные, приравняем их к нулю и решим систему уравнений:"
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa37e184",
+   "id": "6530c7df",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0 \\\\L'_{y}=6+2\\lambda y=0 \\\\L'_{\\lambda}=x^2+y^2-36=0\\end{cases}$$"
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a0c3281",
+   "id": "af733b10",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow \\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}$$"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38ad2204",
+   "id": "82c9eb32",
    "metadata": {},
    "source": [
     "#### $$\\Rightarrow \\left[ \\begin{gathered} \\left\\{\\begin{gathered}x=\\frac{24}{5} \\\\ y=\\frac{18}{5} \\\\ y=\\frac{5}{6}\\end{gathered}\\right. \\\\ \\left\\{\\begin{gathered}x=-\\frac{24}{5} \\\\ y=-\\frac{18}{5} \\\\ y=-\\frac{5}{6} \\end{gathered}\\right.\\end{gathered} \\right.$$"
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da77c0e6",
+   "id": "82fc20cb",
    "metadata": {},
    "source": [
     "получаем две точки $(\\frac{24}{5},\\frac{18}{5},\\frac{5}{6})$ и $(-\\frac{24}{5},-\\frac{18}{5},-\\frac{5}{6})$"
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eda5255d",
+   "id": "8e4da2da",
    "metadata": {},
    "source": [
     "найдём вторые производные:"
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38739d28",
+   "id": "e31b4eb3",
    "metadata": {},
    "source": [
     "### $$L''_{xx}=2\\lambda \\\\ L''_{xy}=0 \\\\ L''_{x\\lambda}=2x$$"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72471c17",
+   "id": "8c02e3b1",
    "metadata": {},
    "source": [
     "### $$L''_{yx}=0 \\\\ L''_{yy}=2\\lambda \\\\ L''_{y\\lambda}=2y$$"
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4582292d",
+   "id": "e1d7a3c0",
    "metadata": {},
    "source": [
     "### $$L''_{\\lambda x}=2x \\\\ L''_{\\lambda y}=2y \\\\ L''_{\\lambda\\lambda}=0$$"
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e27b1888",
+   "id": "0c4879fd",
    "metadata": {},
    "source": [
     "далее найдем определитель в общем виде, а затем уже разберемся с каждой точкой:"
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eed269d0",
+   "id": "a46bac3a",
    "metadata": {},
    "source": [
     "### $$\\Delta=\\begin{vmatrix}2\\lambda & 0 & 2x\\\\ 0 & 2\\lambda & 2y\\\\2x & 2y & 0\\\\\\end{vmatrix}=\\begin{vmatrix}+ & - & +\\\\ - & + & -\\\\+ & - & +\\\\\\end{vmatrix}=2\\lambda \\cdot\\begin{vmatrix}2\\lambda & 2y\\\\2y & 0\\\\\\end{vmatrix}-0\\cdot\\begin{vmatrix}0 & 2y\\\\2x & 0\\\\\\end{vmatrix}+2x\\cdot\\begin{vmatrix}0 & 2\\lambda\\\\2x & 2y\\\\\\end{vmatrix}\\\\=2\\lambda \\cdot (2\\lambda \\cdot0-2y\\cdot2y)-0+2x\\cdot(0\\cdot2y - 2\\lambda\\cdot2x) = -8\\lambda(x^2+y^2)$$"
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60f17722",
+   "id": "e866e8b7",
    "metadata": {},
    "source": [
     "по условию $x^2+y^2=36$, тогда"
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc240731",
+   "id": "fe74eba9",
    "metadata": {},
    "source": [
     "### $$\\Delta=-8\\lambda \\cdot 36=-288\\lambda$$"
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56c5930c",
+   "id": "a3b931bb",
    "metadata": {},
    "source": [
     "т.е. знак определителя засисит только от знака $\\lambda$"
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "821079b3",
+   "id": "41486be5",
    "metadata": {},
    "source": [
     "#### если $\\lambda=\\frac{5}{6}$, то $\\Delta<0$, следовательно $(\\frac{24}{5},\\frac{18}{5},\\frac{5}{6})$ - точка минимума"
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b48c1e4",
+   "id": "6fa09a31",
    "metadata": {},
    "source": [
     "#### если $\\lambda=-\\frac{5}{6}$, то $\\Delta>0$, следовательно $(-\\frac{24}{5},-\\frac{18}{5},-\\frac{5}{6})$ - точка максимума"
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bde53133",
+   "id": "bb82a6d2",
    "metadata": {},
    "source": [
     "составим функцию Лагранжа:"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "336fd3e8",
+   "id": "c9dc354f",
    "metadata": {},
    "source": [
     "### $$L(x,y,\\lambda)=2x^2+12xy+32y^2+15+\\lambda \\cdot (x^2+16y^2-64)$$"
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "063c8ca2",
+   "id": "d514dc4b",
    "metadata": {},
    "source": [
     "найдем частные производные, приравняем их к нулю и решим систему уравнений:"
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30e6200d",
+   "id": "966219f7",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}L'_{x}=4x+12y+2\\lambda x=0, \\\\L'_{y}=12x+64y+32\\lambda y=0, \\\\L'_{\\lambda}=x^2+16y^2-64=0 \\end{cases}$$ "
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb79c661",
+   "id": "57113d05",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow\\begin{cases} x=-\\frac{12y}{4+2\\lambda} \\\\ 12(-\\frac{12y}{4+2\\lambda})+64y+32\\lambda y=0 \\\\ x^2+16y^2-64=0\\end{cases}$$ "
@@ -254,58 +254,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ba6e0e9",
+   "id": "99493c18",
    "metadata": {},
    "source": [
-    "### $$\\Rightarrow\\begin{cases} x=-\\frac{12y}{4+2\\lambda} \\\\ \n",
-    "\\left[\n",
-    "\\begin{gathered}\n",
-    "\\lambda = -\\frac{7}{2} \\\\ \n",
-    "\\lambda = -\\frac{1}{2}\n",
-    "\\end{gathered}\n",
-    "\\right.\\\\\n",
-    "x^2+16y^2-64=0\\end{cases}$$ "
+    "### $$\\Rightarrow\\begin{cases} x=-\\frac{12y}{4+2\\lambda} \\\\ \\left[\\begin{gathered}\\lambda = -\\frac{7}{2} \\\\ \\lambda = -\\frac{1}{2}\\end{gathered}\\right.\\\\x^2+16y^2-64=0\\end{cases}$$ "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b48b2f3",
+   "id": "86f980c4",
    "metadata": {},
    "source": [
-    "### $$\\Rightarrow \n",
-    "\\left[ \n",
-    "    \\begin{gathered} \n",
-    "        \\left\\{\n",
-    "        \\begin{gathered}\n",
-    "            \\lambda =-\\frac{7}{2} \\\\ \n",
-    "            x=4y \\\\ \n",
-    "            \\left[\n",
-    "            \\begin{gathered} \n",
-    "                y=\\sqrt{2} \\\\\n",
-    "                y=-\\sqrt{2}\n",
-    "            \\end{gathered}\n",
-    "            \\right.\n",
-    "        \\end{gathered}\n",
-    "        \\right. \\\\\n",
-    "        \\left\\{\n",
-    "        \\begin{gathered}\n",
-    "            \\lambda =-\\frac{1}{2} \\\\ \n",
-    "            x=-4y \\\\ \n",
-    "            \\left[\n",
-    "            \\begin{gathered} \n",
-    "                y=\\sqrt{2} \\\\\n",
-    "                y=-\\sqrt{2}\n",
-    "            \\end{gathered}\n",
-    "            \\right.\n",
-    "        \\end{gathered}\n",
-    "        \\right. \n",
-    "    \\end{gathered} \n",
-    "\\right.$$"
+    "### $$\\Rightarrow \\left[ \\begin{gathered} \\left\\{\\begin{gathered}\\lambda =-\\frac{7}{2} \\\\ x=4y \\\\ \\left[\\begin{gathered}y=\\sqrt{2} \\\\y=-\\sqrt{2}\\end{gathered}\\right.\\end{gathered}\\right. \\\\\\left\\{\\begin{gathered}\\lambda =-\\frac{1}{2} \\\\ x=-4y \\\\ \\left[\\begin{gathered} y=\\sqrt{2} \\\\y=-\\sqrt{2}\\end{gathered}\\right.\\end{gathered}\\right.\\end{gathered}\\right.$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "01fad0f2",
+   "id": "69a1a05e",
    "metadata": {},
    "source": [
     "получаем четыре точки \n",
@@ -317,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df999207",
+   "id": "a7f12c97",
    "metadata": {},
    "source": [
     "найдём вторые производные:"
@@ -325,37 +290,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bbe0ed9",
+   "id": "6ee768b0",
    "metadata": {},
    "source": [
-    "### $$L''_{xx}=4+2\\lambda \\\\ \n",
-    "L''_{xy}=12 \\\\ \n",
-    "L''_{x\\lambda}=2x$$"
+    "### $$L''_{xx}=4+2\\lambda \\\\ L''_{xy}=12 \\\\ L''_{x\\lambda}=2x$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f83f3743",
+   "id": "6cde80cc",
    "metadata": {},
    "source": [
-    "### $$L''_{yx}=12 \\\\ \n",
-    "L''_{yy}=64+32\\lambda \\\\ \n",
-    "L''_{y\\lambda}=32y$$"
+    "### $$L''_{yx}=12 \\\\ L''_{yy}=64+32\\lambda \\\\ L''_{y\\lambda}=32y$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3a8508dd",
+   "id": "853961ed",
    "metadata": {},
    "source": [
-    "### $$L''_{\\lambda x}=2x \\\\ \n",
-    "L''_{\\lambda y}=32y \\\\ \n",
-    "L''_{\\lambda\\lambda}=0$$"
+    "### $$L''_{\\lambda x}=2x \\\\ L''_{\\lambda y}=32y \\\\ L''_{\\lambda\\lambda}=0$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bb212f60",
+   "id": "1ca66fdc",
    "metadata": {},
    "source": [
     "далее найдем определитель в общем виде, а затем уже разберемся с каждой точкой:"
@@ -363,19 +322,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "749999cc",
+   "id": "306ddf43",
    "metadata": {},
    "source": [
-    "### $$\\Delta=\\begin{vmatrix}\n",
-    "4+2\\lambda & 12 & 2x\\\\ \n",
-    "12 & 64+32\\lambda & 32y\\\\\n",
-    "2x & 32y & 0\\\\\n",
-    "\\end{vmatrix}=-256(x^2+16y^2)-126\\lambda(x^2+16y^2)+1536xy$$"
+    "### $$\\Delta=\\begin{vmatrix}4+2\\lambda & 12 & 2x\\\\ 12 & 64+32\\lambda & 32y\\\\2x & 32y & 0\\\\\\end{vmatrix}=-256(x^2+16y^2)-126\\lambda(x^2+16y^2)+1536xy$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5532480d",
+   "id": "505d4072",
    "metadata": {},
    "source": [
     "по условию $x^2+16y^2=64$, тогда"
@@ -383,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d62f6080",
+   "id": "b8b1cad3",
    "metadata": {},
    "source": [
     "### $$\\Delta=-256\\cdot64-126\\lambda\\cdot64+1536xy=-16384-8192\\lambda+1536xy$$"
@@ -391,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c09b2fe",
+   "id": "378e0889",
    "metadata": {},
    "source": [
     "точкa $(4\\sqrt{2},\\sqrt{2},-\\frac{7}{2})$:"
@@ -399,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2b88495",
+   "id": "a0be892e",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{7}{2})+1536\\cdot4\\sqrt{2}\\cdot \\sqrt{2}>0$$"
@@ -407,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f42c4e63",
+   "id": "66846ee3",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(4\\sqrt{2},\\sqrt{2},-\\frac{7}{2})$ - точка максимума"
@@ -415,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74670348",
+   "id": "95aa8f56",
    "metadata": {},
    "source": [
     "точкa $(-4\\sqrt{2},-\\sqrt{2},-\\frac{7}{2})$:"
@@ -423,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34d189d7",
+   "id": "8f8913cd",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{7}{2})+1536\\cdot(-4\\sqrt{2})\\cdot (-\\sqrt{2})>0$$"
@@ -431,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7465ceec",
+   "id": "a272b80e",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(-4\\sqrt{2},-\\sqrt{2},-\\frac{7}{2})$ - точка максимума"
@@ -439,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17872195",
+   "id": "203f57ae",
    "metadata": {},
    "source": [
     "точкa $(-4\\sqrt{2},\\sqrt{2},-\\frac{1}{2})$:"
@@ -447,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fce3c8a4",
+   "id": "d2ef177c",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{1}{2})+1536\\cdot(-4\\sqrt{2})\\cdot \\sqrt{2}<0$$"
@@ -455,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e713b68c",
+   "id": "d72207a8",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(-4\\sqrt{2},\\sqrt{2},-\\frac{1}{2})$ - точка минимума"
@@ -463,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "372ddc31",
+   "id": "dd4b46b8",
    "metadata": {},
    "source": [
     "точкa $(4\\sqrt{2},-\\sqrt{2},-\\frac{1}{2})$:"
@@ -471,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4b8b3bf",
+   "id": "0fc72243",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{1}{2})+1536\\cdot4\\sqrt{2}\\cdot(-\\sqrt{2})<0$$"
@@ -479,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcfc4cbe",
+   "id": "040350a0",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(4\\sqrt{2},-\\sqrt{2},-\\frac{1}{2})$ - точка минимума"
@@ -488,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79222b31",
+   "id": "24572272",
    "metadata": {},
    "outputs": [],
    "source": []
